# Face-Verification-and-Anti-Spoofing

./: .gitignore  README.md  app.py  check_aspect_ratio.py  check_deepface.py  facenet512.onnx  pyproject.toml  requirements.txt  technology_overview.md  test_pipeline.py  visualize_crops.md
src/services/: embedding_service.py  liveness_service.py  verification_service.py
src/utils/: config.py  export_onnx.py  image_utils.py  logger.py
